--- a/1101561008_StoyanRevov/public/index.html
+++ b/1101561008_StoyanRevov/public/index.html
@@ -37,25 +37,40 @@
 		<!-- <script type="text/javascript" src="maincontroller.js"></script> -->
 	</head>
 
-<!-- SET THE CONTROLLER AND GET ALL TODOS -->
+<!-- SET THE CONTROLLER AND GET ALL STUDENTS -->
 	<body ng-controller="mainController">
 		<div class="container">
 
-			<!-- HEADER AND TODO COUNT -->
+			<!-- HEADER AND STUDENTS COUNT -->
 			<div class="jumbotron text-center">
-				<h1>I'm a Todo-aholic <span class="label label-info">{{ todos.length }}</span></h1>
+				<h1>Not a phonebook <span class="label label-info">{{ students.length }}</span></h1>
 			</div>
 
-			<!-- TODO LIST -->
-			<div id="todo-list" class="row">
+			<!-- STUDENTS LIST -->
+			<div id="students-list" class="row">
 				<div class="col-sm-4 col-sm-offset-4">
 
-					<!-- LOOP OVER THE TODOS IN $scope.todos -->
-					<div class="checkbox" ng-repeat="todo in todos">
-						<label>
-							<input type="checkbox" ng-click="deleteTodo(todo._id)"> {{ todo.text }}
-						</label>
-					</div>
+					<!-- LOOP OVER THE STUDENTS IN $scope.students -->
+					<table class="table table-striped">
+						<thead>
+							<tr>
+								<td><h4>Студент</h4></td>
+								<td><h4>Шестица</h4></td>
+							</tr>
+						</thead>
+						<tr ng-repeat="student in students">
+							<td><a href={{student.url}} target="_blank">{{student.name}}</a></td>
+							<td>
+								<select>
+									<option value="3" disabled ng-selected="student.grade != 3 || student.grade != 4 || student.grade != 5 || student.grade != 6">2 (Слаб)</option>
+									<option value="3" ng-selected="student.grade == 3">3 (Среден)</option>
+									<option value="4" ng-selected="student.grade == 4">4 (Добир)</option>
+									<option value="5" ng-selected="student.grade == 5">5 (Много добир)</option>
+									<option value="6" ng-selected="student.grade == 6">6 (Отличен)</option>
+								</select>
+							</td>
+						<tr>
+					</table>
 
 				</div>
 			</div>
