--- a/1101561008_StoyanRevov/public/index.html
+++ b/1101561008_StoyanRevov/public/index.html
@@ -45,53 +45,35 @@
 			<div class="jumbotron text-center">
 				<h1>Not a phonebook <span class="label label-info">{{ students.length }}</span></h1>
 			</div>
+			
+			<div class="row alert {{alertClass}}">{{alertMessage}}</div>
 
 			<!-- STUDENTS LIST -->
 			<div id="students-list" class="row">
-				<div class="col-sm-4 col-sm-offset-4">
-
-					<!-- LOOP OVER THE STUDENTS IN $scope.students -->
-					<table class="table table-striped">
-						<thead>
-							<tr>
-								<td><h4>Студент</h4></td>
-								<td><h4>Шестица</h4></td>
-							</tr>
-						</thead>
-						<tr ng-repeat="student in students">
-							<td><a href={{student.url}} target="_blank">{{student.name}}</a></td>
-							<td>
-							<!--
-								<select>
-									<option value="3" disabled ng-selected="student.grade != 3 || student.grade != 4 || student.grade != 5 || student.grade != 6">2 (Слаб)</option>
-									<option value="3" ng-selected="student.grade == 3">3 (Среден)</option>
-									<option value="4" ng-selected="student.grade == 4">4 (Добир)</option>
-									<option value="5" ng-selected="student.grade == 5">5 (Много добир)</option>
-									<option value="6" ng-selected="student.grade == 6">6 (Отличен)</option>
-								</select>
-							-->
-								<select ng-change="persistGrade(student)" ng-options="item.value as item.description for item in availableGrades" ng-model="student.grade"></select>
-							</td>
+				<!-- LOOP OVER THE STUDENTS IN $scope.students -->
+				<table class="table table-striped">
+					<thead>
 						<tr>
-					</table>
-
-				</div>
-			</div>
-
-			<!-- FORM TO CREATE TODOS -->
-			<div id="todo-form" class="row">
-				<div class="col-sm-8 col-sm-offset-2 text-center">
-					<form>
-						<div class="form-group">
-
-							<!-- BIND THIS VALUE TO formData.text IN ANGULAR -->
-							<input type="text" class="form-control input-lg text-center" placeholder="I want to buy a puppy that will love me forever" ng-model="formData.text">
-						</div>
-
-						<!-- createToDo() WILL CREATE NEW TODOS -->
-						<button type="submit" class="btn btn-primary btn-lg" ng-click="createTodo()">Add</button>
-					</form>
-				</div>
+							<td><h4>Студент</h4></td>
+							<td><h4>Шестица</h4></td>
+						</tr>
+					</thead>
+					<tr ng-repeat="student in students">
+						<td><a href={{student.url}} target="_blank">{{student.name}}</a></td>
+						<td>
+							<!--
+							<select>
+								<option value="3" disabled ng-selected="student.grade != 3 || student.grade != 4 || student.grade != 5 || student.grade != 6">2 (Слаб)</option>
+								<option value="3" ng-selected="student.grade == 3">3 (Среден)</option>
+								<option value="4" ng-selected="student.grade == 4">4 (Добир)</option>
+								<option value="5" ng-selected="student.grade == 5">5 (Много добир)</option>
+								<option value="6" ng-selected="student.grade == 6">6 (Отличен)</option>
+							</select>
+							-->
+							<select ng-change="persistGrade(student)" ng-options="item.value as item.description for item in availableGrades" ng-model="student.grade"></select>
+						</td>
+					<tr>
+				</table>
 			</div>
 
 		</div>
