--- a/1101561008_StoyanRevov/public/index.html
+++ b/1101561008_StoyanRevov/public/index.html
@@ -46,7 +46,7 @@
 				<h1>Not a phonebook <span class="label label-info">{{ students.length }}</span></h1>
 			</div>
 			
-			<div class="row alert {{alertClass}}">{{alertMessage}}</div>
+			<div id="message" class="row alert {{alertClass}}">{{alertMessage}}</div>
 
 			<!-- STUDENTS LIST -->
 			<div id="students-list" class="row">
@@ -54,11 +54,13 @@
 				<table class="table table-striped">
 					<thead>
 						<tr>
+							<td><h4>Фак. Номер</h4></td>
 							<td><h4>Студент</h4></td>
 							<td><h4>Шестица</h4></td>
 						</tr>
 					</thead>
 					<tr ng-repeat="student in students">
+						<td>{{student.facNum}}</td>
 						<td><a href={{student.url}} target="_blank">{{student.name}}</a></td>
 						<td>
 							<!--
