--- a/1201561074_NikolayIvanov/MEAN/public/index.html
+++ b/1201561074_NikolayIvanov/MEAN/public/index.html
@@ -66,7 +66,7 @@
 							{{ entry.address }} 
 					</td>
 					<td>
-						<input type="button" class="btn btn-danger" ng-click="deleteEntry(entry._id)" value="delete" />
+						<input type="button" class="btn btn-danger" ng-click="deleteAddress(entry._id)" value="delete" />
 					</td>
 				</tr>
 			</tbody>
@@ -85,7 +85,7 @@
 						</div>
 
 						<!-- createAddress() WILL CREATE NEW ADDRESS -->
-						<button type="submit" class="btn btn-primary btn-lg" ng-click="createEntry()">Add</button>
+						<button type="submit" class="btn btn-primary btn-lg" ng-click="createAddress()">Add</button>
 					</form>
 				</div>
 			</div>
