Fixed a minor bug with some ids

--- a/1101561009_GeorgiKerezov/public/index.html
+++ b/1101561009_GeorgiKerezov/public/index.html
@@ -95,7 +95,7 @@
 							</td>
 							<td>
 								<div class="bs-docs-example">
-									<a id='{{entry._id}}' class="btn btn-large btn-danger" rel="popover" data-content="<div id='{{entry._id}}' class='popover fade top in counter' style='display: inline;'><div class='popover-content text-center'><div class='btn-group'><a id={{entry._id}} class='btn btn-small btn-success popOver-yes'><i class='icon-ok-sign icon-white'></i> Yes</a><a class='btn btn-small btn-danger popOver-no'><i class='icon-remove-sign icon-white'></i> No</a></div></div></div>">Delete</a>
+									<a name='{{entry._id}}' class="btn btn-large btn-danger" rel="popover" data-content="<div id='{{entry._id}}' class='popover fade top in counter' style='display: inline;'><div class='popover-content text-center'><div class='btn-group'><a id={{entry._id}} class='btn btn-small btn-success popOver-yes'><i class='icon-ok-sign icon-white'></i> Yes</a><a class='btn btn-small btn-danger popOver-no'><i class='icon-remove-sign icon-white'></i> No</a></div></div></div>">Delete</a>
 								</div>
 							</td>
 						</tr>
