--- a/1101561009_GeorgiKerezov/public/index.html
+++ b/1101561009_GeorgiKerezov/public/index.html
@@ -29,19 +29,19 @@
 			</header>
 			<article>
 				<section id="filters">
-					<label>Sorting options</label><button type="button" class="sort-button" ng-click="sort()"><i class='icon-ok-sign'></i>Sort</button><br/>
+					<label>Sorting options</label><button type="button" class="sort-button" ng-click="sort()"><i class='glyphicon glyphicon-sort'></i>Sort</button><br/>
 					<select id="sortField" ng-model="select_value" ng-change="changeField()">
-						<option disabled="disabled">By name</option>
+						<option value="ByName" disabled="disabled">By name</option>
 						<option value="fName">First name</option>
 						<option value="lName">Last name</option>
 					</select>
 					<select id="sortOrder" ng-model="select" ng-change="changePredicate()">
-						<option disabled="disabled">Type</option>
+						<option value="Type" disabled="disabled">Type</option>
 						<option value="asc">Ascending</option>
 						<option value="desc">Descending</option>
 					</select>
 					<div class="basicSearch">
-						<span class="advancedSearchText">Search: <input ng-model="searchText" class="searchText"></span>
+						<span class="advancedSearchText">Search: <input ng-model="searchText" class="searchText"/><i class="glyphicon glyphicon-search"></i></span>
 					</div>
 					<label for="toggleAdvanced" class="labelForSearch">Advanced search (allows editing)</label>
 					<input type="checkbox" id="toggleAdvanced" ng-click="toggleAdvancedSearch()"/>
@@ -89,13 +89,13 @@
 								<input type="text" data-ng-show="editMode" data-ng-model="entry.Number" data-ng-required />
 							</td>
 							<td>
-								<input type="button" data-ng-hide="editMode" ng-click="editMode = true; editEntry(entry)" class="btn btn-primary" value="Edit"/>
-								<input type="button" data-ng-show="editMode" ng-click="saveEntry(entry)" class="btn btn-success" value="Save"/>
-								<input type="button" data-ng-show="editMode" ng-click="editMode = false; cancel()" class="btn btn-danger" value="Cancel">
+								<button type="button" data-ng-hide="editMode" ng-click="editMode = true; editEntry(entry)" class="btn btn-primary"><i class='glyphicon glyphicon-edit'></i>Edit</button>
+								<button type="button" data-ng-show="editMode" ng-click="saveEntry(entry)" class="btn btn-success"><i class='glyphicon glyphicon-save'></i>Save</button>
+								<button type="button" data-ng-show="editMode" ng-click="editMode = false; cancel()" class="btn btn-danger"><i class='glyphicon glyphicon-remove'></i>Cancel</button>
 							</td>
 							<td>
 								<div class="bs-docs-example">
-									<a name='{{entry._id}}' class="btn btn-large btn-danger" rel="popover" data-content="<div id='{{entry._id}}' class='popover fade top in counter' style='display: inline;'><div class='popover-content text-center'><div class='btn-group'><a id={{entry._id}} class='btn btn-small btn-success popOver-yes'><i class='icon-ok-sign icon-white'></i> Yes</a><a class='btn btn-small btn-danger popOver-no'><i class='icon-remove-sign icon-white'></i> No</a></div></div></div>">Delete</a>
+									<a name='{{entry._id}}' class="btn btn-large btn-danger" rel="popover" data-content="<div id='{{entry._id}}' class='popover fade top in counter' style='display: inline;'><div class='popover-content text-center'><div class='btn-group'><a id={{entry._id}} class='btn btn-small btn-success popOver-yes'><i class='icon-ok-sign icon-white'></i> Yes</a><a class='btn btn-small btn-danger popOver-no'><i class='icon-remove-sign icon-white'></i> No</a></div></div></div>"><i class='glyphicon glyphicon-remove'></i>Delete</a>
 								</div>
 							</td>
 						</tr>
@@ -105,13 +105,13 @@
 				<div class="pagination" ng-show="entries.length">
 					<ul class="pagination-control pagination">
 						<li>
-							<button type="button" class="btn btn-primary" ng-disabled="curPage == 0" ng-click="curPage=curPage-1"> &lt; PREV</button>
+							<button type="button" class="btn btn-primary button-prev" ng-disabled="curPage == 0" ng-click="curPage=curPage-1"><i class="glyphicon glyphicon-chevron-left"></i>PREV</button>
 						</li>
 						<li>
 							<span>Page {{curPage + 1}} of {{ numberOfPages() }}</span>
 						</li>
 						<li>
-							<button type="button" class="btn btn-primary" ng-disabled="curPage >= entries.length/pageSize - 1" ng-click="curPage = curPage+1">NEXT &gt;</button>
+							<button type="button" class="btn btn-primary button-next" ng-disabled="curPage >= entries.length/pageSize - 1" ng-click="curPage = curPage+1">NEXT<i class="glyphicon glyphicon-chevron-right"></i></button>
 						</li>
 					</ul>
 				</div>
@@ -128,7 +128,7 @@
 						</div>
 
 						<!-- createEntry() WILL CREATE NEW ENTRIES -->
-						<button type="submit" class="btn btn-success btn-lg" ng-click="createEntry()">Add</button>
+						<button type="submit" class="btn btn-success btn-lg" ng-click="createEntry()"><i class='glyphicon glyphicon-plus'></i>Add</button>
 					</form>
 				</div>
 			</section>
@@ -136,7 +136,7 @@
 			<section class="errors"></section>
 		</section>
 		<footer id="footer">
-			<p class="muted">Created by Georgi Kerezov<br/>Faculty number: 1101561009</p>
+			<p class="muted"><i class='glyphicon glyphicon-copyright-mark'></i>Created by Georgi Kerezov, Faculty number: 1101561009</p>
 		</footer>
 		
 		<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
