Final version of phonebook with MEAN

--- a/1301681025_AlexanderRusakov/public/index.html
+++ b/1301681025_AlexanderRusakov/public/index.html
@@ -1,64 +1,64 @@
-<html>
-<head>
-<title></title>
-<link rel="stylesheet" href="css/bootstrap.min.css" />
-<link rel="stylesheet" href="css/bootstrap-theme.min.css" />
-</head>
-<body>
-<nav class="navbar navbar-default" role="navigation">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Brand</a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-      <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-<script src="js/jquery-1.11.1.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-</body>
+<!DOCTYPE html>
+<html data-ng-app="fmiFe">
+	<head>
+		<meta charset="utf-8"/>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Angular Phonebook</title>
+		
+		<!-- ANGULARJS & JQUERY -->
+		<script type="text/javascript" src="js/angular.min.js"></script>
+		<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
+		<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+		
+		<!-- BOOTSTRAP -->
+		<link rel="stylesheet" href="css/bootstrap.min.css" />
+		<link rel="stylesheet" href="css/bootstrap-theme.min.css" />
+		
+		<!-- CUSTOM JS -->
+		<script type="text/javascript" src="js/custom.js"></script>
+	</head>
+	<body data-ng-controller="mainController">
+		<div class="container" style = "text-align: center;">
+			<div class="starter-template">
+				<div class="jumbotron">
+					<h1 class="cover-heading">My simple phonebook</h1>
+					<!-- <p class="lead">With {{ contacts.length }} contacts!</p> -->
+				</div>
+				
+				<!-- PHONEBOOK -->
+				<!-- ADD CONTACT -->
+				<form class="form-inline" role="form">
+				  <div class="form-group has-succes has-feedback">
+					<input type="text" class="form-control" id="name" placeholder="Enter name" data-ng-model="formData.name">
+				  </div>
+				  <div class="form-group has-succes has-feedback">
+					<input type="text" class="form-control" id="phone" placeholder="Enter phone" data-ng-model="formData.phone">
+				  </div>
+				  <button type="button" class="btn btn-success" data-ng-click="createContact()">Add</button>
+				</form>
+				
+				<!-- LIST OF CONTACTS -->
+				<table class="table" style="text-align: left; vertical-align: middle;">
+					<thead>
+						<tr>
+							<th>#</th>
+							<th>Name</th>
+							<th>Phone</th>
+							<th>Delete</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr data-ng-repeat="contact in contacts">
+							<td class="index"></td>
+							<td>{{ contact.name }}</td>
+							<td>{{ contact.phone }}</td>
+							<td><button type="button" class="btn btn-danger" ng-click="deleteContact(contact._id)">Delete</button></td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	</body>
 </html>
