--- a/1101561009_GeorgiKerezov/public/index.html
+++ b/1101561009_GeorgiKerezov/public/index.html
@@ -29,41 +29,40 @@
 			</header>
 			<article>
 				<section id="filters">
-					<label>Sorting options</label><button type="button" class="sort-button" ng-click="sort()"><i class='glyphicon glyphicon-sort'></i>Sort</button><br/>
-					<select id="sortField" ng-model="select_value" ng-change="changeField()">
+					<span class='sortingLabel'>Sorting options</span><button type="button" class="sort-button" data-ng-click="sort()"><i class='glyphicon glyphicon-sort'></i>Sort</button><br/>
+					<select id="sortField" data-ng-model="select_value" data-ng-change="changeField()">
 						<option value="ByName" disabled="disabled">By name</option>
 						<option value="fName">First name</option>
 						<option value="lName">Last name</option>
 					</select>
-					<select id="sortOrder" ng-model="select" ng-change="changePredicate()">
+					<select id="sortOrder" data-ng-model="select" ng-change="changePredicate()">
 						<option value="Type" disabled="disabled">Type</option>
 						<option value="asc">Ascending</option>
 						<option value="desc">Descending</option>
 					</select>
 					<div class="basicSearch">
-						<span class="advancedSearchText">Search: <input ng-model="searchText" class="searchText"/><i class="glyphicon glyphicon-search"></i></span>
+						<span class="advancedSearchText">
+							Search: <input type="text" class="searchText" data-ng-model="query"/>
+							<i class="glyphicon glyphicon-search btn btn-default" data-ng-click="search()"></i>
+						</span>
 					</div>
-					<label for="toggleAdvanced" class="labelForSearch">Advanced search (allows editing)</label>
-					<input type="checkbox" id="toggleAdvanced" ng-click="toggleAdvancedSearch()"/>
+					<label for="toggleAdvanced" class="labelForSearch">Advanced search</label>
+					<input type="checkbox" id="toggleAdvanced" data-ng-click="toggleAdvancedSearch()"/>
 				</section>
 				<div id="advancedSearch" class="form-inline">
-					<hr>
+					<hr/>
 					<div class="form-group">
-						<label class="sr-only" for="firstNameSearch">First name</label>
-						<input id="firstNameSearch" type="text" class="form-control" placeholder="First name only" ng-model="search.Fname">
+						<input id="firstNameSearch" type="text" class="form-control" placeholder="First name only" data-ng-model="queryAdvanced.Fname"/>
 					</div>
 					<div class="form-group">
-						<label class="sr-only" for="lastNameSearch">Last name</label>
-						<input id="lastNameSearch" type="text" class="form-control" placeholder="Last name only" ng-model="search.Lname">
+						<input id="lastNameSearch" type="text" class="form-control" placeholder="Last name only" data-ng-model="queryAdvanced.Lname"/>
 					</div>
 					<div class="form-group ">
-						<label class="sr-only" for="phoneSearch">Number</label>
-						<input id="phoneSearch" type="text" class="form-control" placeholder="Phone only" ng-model="search.Number">
+						<input id="phoneSearch" type="text" class="form-control" placeholder="Phone only" data-ng-model="queryAdvanced.Number"/>
 					</div>
+					<i class="glyphicon glyphicon-zoom-in btn btn-default" data-ng-click="searchAdvanced()"></i>
 					<div class="checkbox">
-						<label>
-							<input id="exactMatch" type="checkbox" ng-model="strict" /><span class="exactMatchText">Exact match</span>
-						</label>
+						<input id="exactMatch" type="checkbox" data-ng-model="strict" /><label for="exactMatch"><span class="exactMatchText">Exact match</span></label>
 					</div>
 				</div>
 				<table id="content-table" class="table table-striped">
@@ -75,7 +74,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr ng-repeat="entry in entries | filter:searchText | filter:search:strict | pagination: curPage * pageSize | limitTo: pageSize" bs-popover>
+						<tr data-ng-repeat="entry in entries | pagination: curPage * pageSize | limitTo: pageSize" bs-popover>
 							<td>
 								<span data-ng-hide="editMode">{{entry.Fname}}</span>
 								<input type="text" data-ng-show="editMode" data-ng-model="entry.Fname" data-ng-required />
@@ -89,29 +88,28 @@
 								<input type="text" data-ng-show="editMode" data-ng-model="entry.Number" data-ng-required />
 							</td>
 							<td>
-								<button type="button" data-ng-hide="editMode" ng-click="editMode = true; editEntry(entry)" class="btn btn-primary"><i class='glyphicon glyphicon-edit'></i>Edit</button>
-								<button type="button" data-ng-show="editMode" ng-click="saveEntry(entry)" class="btn btn-success"><i class='glyphicon glyphicon-save'></i>Save</button>
-								<button type="button" data-ng-show="editMode" ng-click="editMode = false; cancel()" class="btn btn-danger"><i class='glyphicon glyphicon-remove'></i>Cancel</button>
+								<button type="button" data-ng-hide="editMode" data-ng-click="editMode = true; editEntry(entry)" class="btn btn-primary"><i class='glyphicon glyphicon-edit'></i>Edit</button>
+								<button type="button" data-ng-show="editMode" data-ng-click="saveEntry(entry)" class="btn btn-success"><i class='glyphicon glyphicon-save'></i>Save</button>
+								<button type="button" data-ng-show="editMode" data-ng-click="editMode = false; cancel()" class="btn btn-danger"><i class='glyphicon glyphicon-remove'></i>Cancel</button>
 							</td>
 							<td>
-								<div class="bs-docs-example">
+								<div class="lastColumn">
 									<a name='{{entry._id}}' class="btn btn-large btn-danger" rel="popover" data-content="<div id='{{entry._id}}' class='popover fade top in counter' style='display: inline;'><div class='popover-content text-center'><div class='btn-group'><a id={{entry._id}} class='btn btn-small btn-success popOver-yes'><i class='icon-ok-sign icon-white'></i> Yes</a><a class='btn btn-small btn-danger popOver-no'><i class='icon-remove-sign icon-white'></i> No</a></div></div></div>"><i class='glyphicon glyphicon-remove'></i>Delete</a>
 								</div>
 							</td>
 						</tr>
-						
 					</tbody>
 				</table>
-				<div class="pagination" ng-show="entries.length">
+				<div class="pagination" data-ng-show="entries.length">
 					<ul class="pagination-control pagination">
 						<li>
-							<button type="button" class="btn btn-primary button-prev" ng-disabled="curPage == 0" ng-click="curPage=curPage-1"><i class="glyphicon glyphicon-chevron-left"></i>PREV</button>
+							<button type="button" class="btn btn-primary button-prev" data-ng-disabled="curPage == 0" data-ng-click="curPage=curPage-1"><i class="glyphicon glyphicon-chevron-left"></i>PREV</button>
 						</li>
 						<li>
 							<span>Page {{curPage + 1}} of {{ numberOfPages() }}</span>
 						</li>
 						<li>
-							<button type="button" class="btn btn-primary button-next" ng-disabled="curPage >= entries.length/pageSize - 1" ng-click="curPage = curPage+1">NEXT<i class="glyphicon glyphicon-chevron-right"></i></button>
+							<button type="button" class="btn btn-primary button-next" data-ng-disabled="curPage >= entries.length/pageSize - 1" data-ng-click="curPage = curPage+1">NEXT<i class="glyphicon glyphicon-chevron-right"></i></button>
 						</li>
 					</ul>
 				</div>
@@ -122,13 +120,13 @@
 					<form>
 						<div class="form-group">
 							<!-- BIND THIS VALUE TO formData.text IN ANGULAR -->
-							<input type="text" required="required" class="form-control input-lg text-center" placeholder="First Name" ng-model="formData.Fname">
-							<input type="text" required="required" class="form-control input-lg text-center" placeholder="Last Name" ng-model="formData.Lname">
-							<input type="text" required="required" class="form-control input-lg text-center" placeholder="Number" ng-model="formData.Number">
+							<input type="text" required="required" class="form-control input-lg text-center" placeholder="First Name" data-ng-model="formData.Fname">
+							<input type="text" required="required" class="form-control input-lg text-center" placeholder="Last Name" data-ng-model="formData.Lname">
+							<input type="text" required="required" class="form-control input-lg text-center" placeholder="Number" data-ng-model="formData.Number">
 						</div>
 
 						<!-- createEntry() WILL CREATE NEW ENTRIES -->
-						<button type="submit" class="btn btn-success btn-lg" ng-click="createEntry()"><i class='glyphicon glyphicon-plus'></i>Add</button>
+						<button type="submit" class="btn btn-success btn-lg" data-ng-click="createEntry()"><i class='glyphicon glyphicon-plus'></i>Add</button>
 					</form>
 				</div>
 			</section>
@@ -138,7 +136,6 @@
 		<footer id="footer">
 			<p class="muted"><i class='glyphicon glyphicon-copyright-mark'></i>Created by Georgi Kerezov, Faculty number: 1101561009</p>
 		</footer>
-		
 		<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 		<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script>
