--- a/1301681093_HristoEnchev/public/index.html
+++ b/1301681093_HristoEnchev/public/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="urf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1"><!-- Optimize mobile viewport -->
-		<title>Angular SPA</title>
+		<title>Phonebook</title>
 
 		<!-- We have to install AngulaJS in this page -->
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script>
@@ -18,7 +18,7 @@
 		<style type="text/css">
 			html 					{ overflow-y:scroll; }
 			body 					{ padding-top:50px; }
-			#todo-list 				{ margin-bottom:30px; }
+			#phonebook-list 				{ margin-bottom:30px; }
 		</style>
 		
 		<!-- Optional theme -->
@@ -37,41 +37,44 @@
 		<!-- <script type="text/javascript" src="maincontroller.js"></script> -->
 	</head>
 
-<!-- SET THE CONTROLLER AND GET ALL TODOS -->
+<!-- SET THE CONTROLLER AND GET ALL names -->
 	<body ng-controller="mainController">
 		<div class="container">
 
-			<!-- HEADER AND TODO COUNT -->
 			<div class="jumbotron text-center">
-				<h1>I'm a Todo-aholic <span class="label label-info">{{ todos.length }}</span></h1>
+				<h1>Make your Phonebook <span class="label label-info">{{ contacts.length }}</span></h1>
 			</div>
 
-			<!-- TODO LIST -->
-			<div id="todo-list" class="row">
+			<!-- PB LIST -->
+			<div id="phonebook-list" class="row">
 				<div class="col-sm-4 col-sm-offset-4">
 
-					<!-- LOOP OVER THE TODOS IN $scope.todos -->
-					<div class="checkbox" ng-repeat="todo in todos">
+					<!-- LOOP OVER THE names IN $scope.names -->
+					<div class="checkbox" ng-repeat="name in contacts">
 						<label>
-							<input type="checkbox" ng-click="deleteTodo(todo._id)"> {{ todo.text }}
+							<input type="checkbox" ng-click="deleteName(name._id)"> {{ name.name }} {{ name.pNumber }}
 						</label>
 					</div>
 
 				</div>
 			</div>
 
-			<!-- FORM TO CREATE TODOS -->
-			<div id="todo-form" class="row">
+			<!-- FORM TO CREATE names -->
+			<div class="row">
 				<div class="col-sm-8 col-sm-offset-2 text-center">
-					<form>
+					<form name="myForm">
 						<div class="form-group">
 
 							<!-- BIND THIS VALUE TO formData.text IN ANGULAR -->
-							<input type="text" class="form-control input-lg text-center" placeholder="I want to buy a puppy that will love me forever" ng-model="formData.text">
+							<input name="fname" type="text" class="form-control input-lg text-center" required placeholder="Add Name" ng-model="formData.name">
+						</div>
+						<div class="form-group">
+							<input name="fname" id="test12" type="text" class="form-control input-lg text-center" required placeholder="Add Phone number" ng-model="formData.pNumber">
 						</div>
 
-						<!-- createToDo() WILL CREATE NEW TODOS -->
-						<button type="submit" class="btn btn-primary btn-lg" ng-click="createTodo()">Add</button>
+
+						<!--  WILL CREATE NEW names -->
+						<button type="submit" class="btn btn-primary btn-lg" ng-click="createName()">Add</button>
 					</form>
 				</div>
 			</div>
